--- a/styles.css
+++ b/styles.css
@@ -4,5 +4,13 @@ body {
     background-repeat: no-repeat;
   }
 h1{
-    color: blue;
+    color: rgb(255, 17, 0);
 }
+h2{
+  color: rgb(9, 255, 0);
+}
+p{
+  color: rgb(255, 132, 0);
+}
+
+
